Added new notebooks

--- a/notebooks/NTM_Opt_refactored.ipynb
+++ b/notebooks/NTM_Opt_refactored.ipynb
@@ -11,7 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: Tesla M2090 (CNMeM is disabled, cuDNN not available)\n"
+      "Using gpu device 0: Tesla K40m (CNMeM is disabled, cuDNN 4007)\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -53,13 +53,10 @@
     "class LSTMOptimizer:\n",
     "    def __init__(self, input_var, func, func_params, loss_type='sum', lambd=1e-5, **kwargs):\n",
     "        n_steps = T.iscalar()\n",
-    "        \n",
-    "        l_input = L.layers.InputLayer(shape=(None,), input_var=input_var)\n",
-    "        self.l_optim = NTM_BFGS_OptimizerLayer(l_input, n_steps=n_steps, function=func, **kwargs)\n",
-    "        \n",
-    "        self.params_init = L.layers.get_all_param_values(self.l_optim)\n",
+    "        self.optim = NTM_BFGS_Optimizer(n_steps=n_steps, function=func, input_var=input_var, **kwargs)\n",
+    "        self.params_init = L.layers.get_all_param_values(self.optim.l_rec)\n",
     "\n",
-    "        theta_history, loss_history, scan_updates = L.layers.get_output(self.l_optim)\n",
+    "        theta_history, loss_history, scan_updates = self.optim.optimize(input_var)\n",
     "\n",
     "        self.loss_type = loss_type\n",
     "        if loss_type == 'sum':\n",
@@ -73,22 +70,29 @@
     "        elif loss_type == 'rel_sum':\n",
     "            loss = (loss_history[1:] / loss_history[:-1]).sum()\n",
     "                \n",
-    "        loss += lambd * L.regularization.regularize_network_params(self.l_optim, L.regularization.l2)\n",
+    "        loss += lambd * L.regularization.regularize_network_params(self.optim.l_rec, L.regularization.l2)\n",
     "                \n",
     "        self.lr = theano.shared(np.array(0.01, dtype=np.float32))\n",
     "\n",
-    "        params = L.layers.get_all_params(self.l_optim)\n",
+    "        params = L.layers.get_all_params(self.optim.l_rec)\n",
     "        updates = L.updates.adam(loss, params, learning_rate=self.lr)\n",
     "        updates.update(scan_updates)\n",
     "        \n",
-    "        self.loss_fn = theano.function([input_var, n_steps] + func_params, [theta_history, loss_history], allow_input_downcast=True, updates=scan_updates)\n",
-    "        self.train_fn = theano.function([input_var, n_steps] + func_params, [theta_history, loss_history], updates=updates, allow_input_downcast=True)\n",
+    "        import time\n",
     "        \n",
-    "        theta_history_det, loss_history_det, scan_updates_det = L.layers.get_output(self.l_optim, deterministic=True)\n",
-    "        self.loss_det_fn = theano.function([input_var, n_steps] + func_params, [theta_history_det, loss_history_det], allow_input_downcast=True, updates=scan_updates_det)\n",
+    "        t = time.time()\n",
+    "        self.loss_fn = theano.function([input_var, n_steps] + func_params, [theta_history, loss_history], allow_input_downcast=True, updates=scan_updates)\n",
+    "        print(\"Time compiling loss_fn: {}\".format(time.time() - t))\n",
+    "        \n",
+    "        t = time.time()\n",
+    "        self.train_fn = theano.function([input_var, n_steps] + func_params, [theta_history, loss_history], updates=updates, allow_input_downcast=True)\n",
+    "        print(\"Time compiling train_fn: {}\".format(time.time() - t))\n",
+    "        \n",
+    "#         theta_history_det, loss_history_det, scan_updates_det = L.layers.get_output(self.l_optim, deterministic=True)\n",
+    "#         self.loss_det_fn = theano.function([input_var, n_steps] + func_params, [theta_history_det, loss_history_det], allow_input_downcast=True, updates=scan_updates_det)\n",
     "        \n",
     "    def reset_network(self):\n",
-    "        L.layers.set_all_param_values(self.l_optim, self.params_init)\n",
+    "        L.layers.set_all_param_values(self.optim.l_rec, self.params_init)\n",
     "        \n",
     "    def train(self, sample_function, n_iter=100, n_epochs=50, batch_size=100, decay_rate=0.96):\n",
     "        optimizer_loss = []\n",
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -245,10 +249,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_gac=0; loglr=False\n",
-      "n_gac=0; loglr=True\n",
-      "n_gac=5; loglr=False\n",
-      "n_gac=5; loglr=True\n"
+      "ntm_prep\n",
+      "lstm_0\n",
+      "lstm_1\n",
+      "ntm_prep\n",
+      "lstm_0\n",
+      "ntm_prep\n",
+      "lstm_0\n",
+      "lstm_1\n",
+      "ntm_prep\n",
+      "lstm_0\n",
+      "lstm_1\n",
+      "ntm_prep\n",
+      "lstm_0\n",
+      "ntm_prep\n",
+      "lstm_0\n",
+      "lstm_1\n",
+      "ntm_prep\n",
+      "lstm_0\n",
+      "lstm_1\n",
+      "None\n",
+      "From index:  (DisconnectedGrad.0, Elemwise{true_div,no_inplace}.0) 1\n",
+      "From index:  (Elemwise{add,no_inplace}.0, Elemwise{mul,no_inplace}.0) 2\n",
+      "From index:  (Elemwise{add,no_inplace}.0, Elemwise{mul,no_inplace}.0) 2\n",
+      "From index:  (Elemwise{mul,no_inplace}.0, InplaceDimShuffle{0,x}.0, Elemwise{add,no_inplace}.0) 1\n",
+      "From index:  (DisconnectedGrad.0, Elemwise{true_div,no_inplace}.0) 0\n",
+      "From index:  (Elemwise{mul,no_inplace}.0, InplaceDimShuffle{0,x}.0, Elemwise{add,no_inplace}.0) 2\n",
+      "From index:  (Elemwise{add,no_inplace}.0, Elemwise{mul,no_inplace}.0) 2\n",
+      "From index:  (Elemwise{mul,no_inplace}.0, InplaceDimShuffle{0,x}.0, Elemwise{add,no_inplace}.0) 2\n",
+      "From index:  (Elemwise{add,no_inplace}.0, Elemwise{mul,no_inplace}.0) 2\n",
+      "None 1\n",
+      "None 0\n",
+      "index_read\n",
+      "read_in 2 2\n",
+      "None\n",
+      "hid_0_in 2 2\n",
+      "None\n",
+      "cell_1_in 2 2\n",
+      "index_mem\n",
+      "mem_in 2 2\n",
+      "None\n",
+      "cell_0_in 2 2\n",
+      "None\n",
+      "hid_1_in 2 2\n",
+      "None\n",
+      "theta_in 1 1\n",
+      "Time compiling loss_fn: 36.373104095458984\n",
+      "Time compiling train_fn: 141.5856466293335\n",
+      "n_gac=0; loglr=True\n"
      ]
     }
    ],
@@ -268,8 +316,8 @@
     "    'loss_type': 'sum',\n",
     "}\n",
     "\n",
-    "for n_gac in [0, 5]:\n",
-    "    for loglr in [False, True]:\n",
+    "for n_gac in [0]: #for n_gac in [0, 5]:\n",
+    "    for loglr in [True]:#for loglr in [False, True]:\n",
     "        options['n_gac'] = n_gac\n",
     "        options['loglr'] = loglr\n",
     "        \n",
@@ -317,9 +365,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch number 38\n",
-      "Time on epoch 38: 6.762394189834595\n",
-      "Loss on 38: 55.774962805211544; 0.09885932132601738\n"
+      "Epoch number 9\n",
+      "Time on epoch 9: 9.535544395446777\n",
+      "Loss on 9: 48.77206290885806; 0.1044689305126667\n"
      ]
     }
    ],
