refactored common to optimizers code

--- a/notebooks/LSTM_Opt_refactored-Copy1.ipynb
+++ b/notebooks/LSTM_Opt_refactored-Copy1.ipynb
@@ -230,36 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time compiling loss_fn: 2.12699818611145\n",
-      "Time compiling train_fn: 50.26983070373535\n",
-      "Epoch number 0\n",
-      "\tTime: 4.075364828109741\n",
-      "\tOptimizer loss: 11.219985961914062\n",
-      "\tMedian final loss: 1.9376468658447266\n",
-      "Epoch number 1\n",
-      "\tTime: 4.052269697189331\n",
-      "\tOptimizer loss: 50.31204605102539\n",
-      "\tMedian final loss: 1.4598965644836426\n",
-      "Epoch number 2\n",
-      "\tTime: 4.047917127609253\n",
-      "\tOptimizer loss: 29.109325408935547\n",
-      "\tMedian final loss: 1.4426002502441406\n",
-      "Epoch number 3\n",
-      "\tTime: 4.058973550796509\n",
-      "\tOptimizer loss: 2.1299304962158203\n",
-      "\tMedian final loss: 1.2334139347076416\n",
-      "Epoch number 4\n",
-      "\tTime: 4.079210996627808\n",
-      "\tOptimizer loss: 6.372885704040527\n",
-      "\tMedian final loss: 1.9172298908233643\n",
-      "Epoch number 5\n",
-      "\tTime: 4.065276861190796\n",
-      "\tOptimizer loss: 36.8162841796875\n",
-      "\tMedian final loss: 2.053131103515625\n",
-      "Epoch number 6\n",
-      "\tTime: 4.042057752609253\n",
-      "\tOptimizer loss: 4.70594596862793\n",
-      "\tMedian final loss: 1.0208936929702759\n"
+      "Time compiling loss_fn: 2.0469183921813965\n"
      ]
     }
    ],
